--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -1,1 +1,20 @@
+# ***************************************
+# Hollistic Parameters
+# ***************************************
+
+random_state: 42
+
+
+# ***************************************
+# Data Ingestion Parameters
+# ***************************************
+
 raw_data_filepath: "data/01_raw/diabetic_data.csv"
+
+
+# ***************************************
+# Data Split Parameters
+# ***************************************
+
+target_column: "readmitted"
+test_size: 0.3
