fixed great expectations workflow

--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -1,13 +1,20 @@
-# ***************************************
+# *****************************
 # Hollistic Parameters
-# ***************************************
+# *****************************
 
 random_state: 42
 
 
-# ***************************************
+# *****************************
+# Hollistic Parameters
+# *****************************
+
+build_data_docs: False
+
+
+# *****************************
 # Data Split Parameters
-# ***************************************
+# *****************************
 
 target_column: "readmitted"
 test_size: 0.3
