--- a/great_expectations/great_expectations.yml
+++ b/great_expectations/great_expectations.yml
@@ -17,26 +17,50 @@ datasources:
   raw_datasource:
     data_connectors:
       default_inferred_data_connector_name:
+        module_name: great_expectations.datasource.data_connector
         base_directory: ../data/01_raw
+        class_name: InferredAssetFilesystemDataConnector
         default_regex:
           group_names:
             - data_asset_name
           pattern: (.*)
-        module_name: great_expectations.datasource.data_connector
-        class_name: InferredAssetFilesystemDataConnector
       default_runtime_data_connector_name:
+        module_name: great_expectations.datasource.data_connector
         assets:
           my_runtime_asset_name:
+            module_name: great_expectations.datasource.data_connector.asset
             batch_identifiers:
               - runtime_batch_identifier_name
-            module_name: great_expectations.datasource.data_connector.asset
             class_name: Asset
-        module_name: great_expectations.datasource.data_connector
         class_name: RuntimeDataConnector
-    execution_engine:
-      module_name: great_expectations.execution_engine
-      class_name: PandasExecutionEngine
     module_name: great_expectations.datasource
+    execution_engine:
+      class_name: PandasExecutionEngine
+      module_name: great_expectations.execution_engine
+    class_name: Datasource
+  clean_datasource:
+    data_connectors:
+      default_inferred_data_connector_name:
+        module_name: great_expectations.datasource.data_connector
+        base_directory: ../data/03_primary
+        class_name: InferredAssetFilesystemDataConnector
+        default_regex:
+          group_names:
+            - data_asset_name
+          pattern: (.*)
+      default_runtime_data_connector_name:
+        module_name: great_expectations.datasource.data_connector
+        assets:
+          my_runtime_asset_name:
+            module_name: great_expectations.datasource.data_connector.asset
+            batch_identifiers:
+              - runtime_batch_identifier_name
+            class_name: Asset
+        class_name: RuntimeDataConnector
+    module_name: great_expectations.datasource
+    execution_engine:
+      class_name: PandasExecutionEngine
+      module_name: great_expectations.execution_engine
     class_name: Datasource
 config_variables_file_path: uncommitted/config_variables.yml
 
