minor update to parameters.yml

--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -7,6 +7,7 @@ random_state: 42
 
 # *****************************
 # Data unit Tests Parameters
+# before and after cleaning
 # *****************************
 
 # for both
