--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+great-expectations~=0.15.12
+hopsworks~=3.7.0
 ipython>=8.10
 jupyterlab>=3.0
 kedro~=0.19.5
@@ -9,4 +11,5 @@ notebook
 pytest~=7.2
 pytest-cov~=3.0
 pytest-mock>=1.7.1, <2.0
+python-dotenv~=1.0.1
 ruff~=0.1.8
