--- a/conf/local/mlflow.yml
+++ b/conf/local/mlflow.yml
@@ -17,8 +17,8 @@
 # credentials: mlflow_credentials
 
 server:
-  mlflow_tracking_uri: null # if null, will use mlflow.get_tracking_uri() as a default
-  mlflow_registry_uri: null # if null, mlflow_tracking_uri will be used as mlflow default
+  mlflow_tracking_uri: "http://localhost:8080" # if null, will use mlflow.get_tracking_uri() as a default
+  mlflow_registry_uri: "http://localhost:8080" # if null, mlflow_tracking_uri will be used as mlflow default
   credentials: null  # must be a valid key in credentials.yml which refers to a dict of sensitive mlflow environment variables (password, tokens...). See top of the file.
   request_header_provider: # this is only useful to deal with expiring token, see https://github.com/Galileo-Galilei/kedro-mlflow/issues/357
     type: null # The path to a class : my_project.pipelines.module.MyClass. Should inherit from https://github.com/mlflow/mlflow/blob/master/mlflow/tracking/request_header/abstract_request_header_provider.py#L4
@@ -52,5 +52,5 @@ tracking:
 # UI-RELATED PARAMETERS -----------------
 
 ui:
-  port: "5000" # the port to use for the ui. Use mlflow default with 5000.
+  port: "8080" # the port to use for the ui. Use mlflow default with 5000.
   host: "127.0.0.1"  # the host to use for the ui. Use mlflow efault of "127.0.0.1".
