--- a/mlruns/357444901871879466/65190fe21994408ba5bc1eaf6228c912/meta.yaml
+++ b/mlruns/357444901871879466/65190fe21994408ba5bc1eaf6228c912/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: file:///C:/Users/fmppo/Desktop/MSDSAA/Y1/S2/MLOps/mlops_prject_2/ml_artifacts/357444901871879466/65190fe21994408ba5bc1eaf6228c912/artifacts
+deleted_time: 1719082515963
 end_time: 1719080038953
 entry_point_name: ''
 experiment_id: '357444901871879466'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 65190fe21994408ba5bc1eaf6228c912
 run_name: data_split
 run_uuid: 65190fe21994408ba5bc1eaf6228c912
