--- a/mlruns/357444901871879466/dcc4856a32e34635aa3bf621ce752d6f/meta.yaml
+++ b/mlruns/357444901871879466/dcc4856a32e34635aa3bf621ce752d6f/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: file:///C:/Users/fmppo/Desktop/MSDSAA/Y1/S2/MLOps/mlops_prject_2/ml_artifacts/357444901871879466/dcc4856a32e34635aa3bf621ce752d6f/artifacts
+deleted_time: 1719082515931
 end_time: 1719080162395
 entry_point_name: ''
 experiment_id: '357444901871879466'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: dcc4856a32e34635aa3bf621ce752d6f
 run_name: feature_engineering
 run_uuid: dcc4856a32e34635aa3bf621ce752d6f
